# grecco_sim

./: .gitignore  README.md  pyproject.toml
.github/workflows/: documentation.yml  lint.yml  uv_test.yml
analysis/: inspection_plots.py  plotter.py  schedule_eval.py  sim_batch_comparison.py
coordinators/: coord_base.py  coord_interface.py
coordinators/implementations/: coord_admm.py  coordinator_dual_newton.py
data/: README
data/heat_pump_database/: heat_pump_database_short_version.csv
data/sample_results/: run_params.json  sample_result_second_order_agents.json
data/sample_scenario/: load_data.csv  network_data.xlsx  pv_data.csv  weather_data.csv
doc/: conf.py  index.rst  optimization.rst  simulation.rst
grecco_sim/analysis/: plotter.py  plotter_admm.py  sim_batch_comparison.py  simulation_eval.py  solver_results_comparison.py
grecco_sim/coordinators/: __init__.py
grecco_sim/local_control/: __init__.py  local_control_basic.py  local_control_distr_opt.py  mycas.py
grecco_sim/sim_data_tools/: simbench_to_pypsa_conversion.py
grecco_sim/sim_models/: __init__.py  battery.py  ev_charger.py  grid.py  grid_node.py  heat_pump.py  model_base.py  models.py
grecco_sim/simulator/: parallel_sim.py  results.py  sim_input.py  simulation_setup.py  simulator.py
sim_data_tools/: forecast_provider.py
simulator/: household_simulator.py  results.py  simulation_setup.py  simulator.py
test/: heat_pump_test.py  main_test.py  simbench_pypsa_test.py  test_local_admm.py  test_simulation_on_sample_data.py  test_util.py
util/: config.py  style.py
(+45 files in other folders)
